basic auth, tailwind needs fixing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,24 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
+
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><%= link_to "", root_path %></li>
+          <li><%= link_to "", root_path %></li>
+          <li><%= link_to "", root_path %></li>
+          <%= button_to 'logout', logout_path, method: :delete, class: 'btn btn-danger' %>
+        </ul>
+      </nav>
+    </header>
+
     <%= yield %>
   </body>
 </html>
